# world-cup-bot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SETUP.md  SHADOW.md  pyproject.toml  requirements-lock.txt
.github/: FUNDING.yml
config/: conviction.yaml  cross_venue.yaml  inventory_penalty.yaml  k107_liquidity_posture.yaml  k108_retail_hygiene.yaml  market_phases.yaml  operating.yaml  risk_gates.yaml  shock_match.yaml  strategy_logic_versions.yaml  travel_burden.yaml  wc_market_registry.json  wc_semantic_rules.yaml
data/: DATA_ATTRIBUTION.md  wc2026-base-camps.yaml  wc2026-host-cities.yaml
docs/: BingSiteAuth.xml  MATCH_SHOCK_V1.md  RUNBOOK.md  TOURNAMENT_KICKOFF.md  index.html  robots.txt  sitemap.xml
exports/: cross-venue-discover-staging-2026-06-04.yaml  k100-ops-followup-2026-06-05.json  k102-brief-revision-2026-06-06.md  k96-conviction-review-2026-06-04.json  k98-conviction-cross-venue-2026-06-05.json  k99-cross-venue-research-2026-06-05.json
prompts/: README.md  advisor.md  deep-research-conviction-staleness.md  deep-research-cross-venue-map.md  deep-research-group-conviction.md  deep-research-inplay-pregame-risks.md  deep-research-knockout-market-map.md  deep-research-module6-scanner.md  deep-research-shadow-weekly.md  deep-research-team-lp-risk.md  deep-research-third-place-gd.md  deep-research-tournament-phase-router.md  deep-research-weekly-osint-pipeline.md
scripts/: build_wc_market_registry.py  check_clob_v2_import.py  check_exports_sanitize.py  check_hardcoded_thresholds.py  shadow_setup.sh  (+4 more)
(+264 files in other folders)
