[project]
name = "world-cup-bot"
version = "0.1.0"
description = "Conviction LP bot for FIFA 2026 advance-to-knockout markets on Polymarket"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
live = [
    "websockets>=12.0",
    "py-clob-client-v2>=1.0.0",
    "eth-account>=0.13.0",
    "cryptography>=42.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "websockets>=12.0",
]

[project.scripts]
world-cup-bot = "world_cup_bot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["world_cup_bot*"]

[tool.setuptools.package-data]
world_cup_bot = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["world_cup_bot", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["world_cup_bot"]
